--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "css-loader": "^2.1.0",
+    "rc-time-picker": "^3.7.3",
     "react": "^16.13.0",
+    "react-calendar": "^2.18.1",
+    "react-confirm-alert": "^2.4.0",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-image-lightbox": "^5.1.0",
+    "react-loader-spinner": "^2.3.0",
+    "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.1",
+    "react-scripts": "3.4.0",
+    "react-star-ratings": "^2.3.0",
+    "react-transition-group": "^2.6.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "style-loader": "^0.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
